<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.d3vx.rcpi.MainActivity"
    android:background="#434343">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="7"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="10">

            <View
                android:id="@+id/temoin"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:background="#00ff00"
                android:layout_weight="0.5">
            </View>

            <ImageButton
                android:src="@drawable/ic_baseline_refresh_24px"
                android:text="@string/pad_reload"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/but_reload"
                android:onClick="buttonClicked"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/edit_url"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6.5"
                android:text=""
                android:textColor="@color/font_color"/>

            <ImageButton
                android:text="@string/pad_clear"
                android:src="@drawable/ic_baseline_cancel_24px"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/but_clear"
                android:onClick="buttonClicked"
                android:layout_weight="1" />


            <ImageButton
                android:src="@drawable/ic_baseline_link_24px"
                android:text="@string/pad_paste"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/paste_but"
                android:onClick="buttonClicked"
                android:textSize="12sp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="5">

            <Spinner
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4.5"
                android:id="@+id/spinner"
                android:textColor="@color/font_color" />
<!--
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/reset"
                android:onClick="buttonClicked"
                android:layout_weight="0.25" />-->

            <ImageButton
                android:src="@drawable/ic_baseline_open_in_browser_24px"
                android:text="@string/pad_open"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/but_open"
                android:onClick="buttonClicked"
                android:layout_weight="0.5" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="5">

            <ImageButton
                android:src="@drawable/ic_baseline_play_pause_48px"
                android:text="@string/pad_play"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/but_play"
                android:onClick="buttonClicked"
                android:layout_weight="1"/>

            <ImageButton
                android:src="@drawable/ic_baseline_fast_rewind_24px"
                android:text="@string/pad_back600"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/but_back600"
                android:onClick="buttonClicked"
                android:layout_weight="1" />

            <ImageButton
                android:src="@drawable/ic_baseline_rewind_24px"
                android:text="@string/pad_back30"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/but_back30"
                android:onClick="buttonClicked"
                android:layout_weight="1" />

            <ImageButton
                android:src="@drawable/ic_baseline_forward_24px"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/but_fwd30"
                android:onClick="buttonClicked"
                android:layout_weight="1" />

            <ImageButton
                android:src="@drawable/ic_baseline_fast_forward_24px"
                android:text="@string/pad_fwd600"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/but_fwd600"
                android:onClick="buttonClicked"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageButton
                android:src="@drawable/ic_baseline_volume_off_24px"
                android:text="@string/pad_volup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/but_voloff"
                android:clickable="false"
                android:onClick="buttonClicked"
                android:layout_weight="1" />

            <ImageButton
                android:src="@drawable/ic_baseline_volume_up_24px"
                android:text="@string/pad_volup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/but_volup"
                android:onClick="buttonClicked"
                android:layout_weight="1" />

            <ImageButton
                android:src="@drawable/ic_baseline_volume_down_24px"
                android:text="@string/pad_voldown"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/but_voldown"
                android:onClick="buttonClicked"
                android:layout_weight="1" />

            <ImageButton
                android:src="@drawable/ic_baseline_skip_next_24px"
                android:text="@string/pad_audionext"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/but_audionext"
                android:onClick="buttonClicked"
                android:layout_weight="1" />

            <ImageButton
                android:src="@drawable/ic_baseline_skip_previous_24px"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/but_audioprev"
                android:onClick="buttonClicked"
                android:layout_weight="1" />
        </LinearLayout>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="5">

            <ImageButton
                android:src="@drawable/ic_baseline_subtitles_24px"
                android:text="@string/pad_subtitles"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/but_subtitles"
                android:onClick="buttonClicked"
                android:layout_weight="1"/>

            <ImageButton
                android:src="@drawable/ic_baseline_skip_next_24px"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/but_subtitlesnext"
                android:onClick="buttonClicked"
                android:layout_weight="1" />

            <ImageButton
                android:src="@drawable/ic_baseline_skip_previous_24px"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/but_subtitlesprev"
                android:onClick="buttonClicked"
                android:layout_weight="1" />


            <ImageButton
                android:src="@drawable/ic_baseline_fast_rewind_24px"
                android:text="@string/pad_subtitlesdelaydown"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/but_subtitlesdelaydown"
                android:onClick="buttonClicked"
                android:layout_weight="1" />


            <ImageButton
                android:src="@drawable/ic_baseline_fast_forward_24px"
                android:text="@string/pad_subtitlesdelayup"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/but_subtitlesdelayup"
                android:onClick="buttonClicked"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:weightSum="5">


            <ImageButton
                android:src="@drawable/ic_baseline_info_24px"
                android:text="@string/pad_infos"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/but_infos"
                android:onClick="buttonClicked"
                android:layout_weight="1"/>
            <RelativeLayout
                android:layout_width="0dp"
                android:orientation="horizontal"
                android:layout_height="35dp"
                android:layout_weight="3"
                android:layout_gravity="center"
                android:weightSum="1"
                android:gravity="center">
                <ProgressBar
                    android:id="@+id/filmProgess"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_height="40dp"/>
                <TextView
                    android:id="@+id/filmProgessText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/font_color"/>

            </RelativeLayout>

            <ImageButton
                android:src="@drawable/ic_baseline_clear_24px"
                android:text="@string/pad_exit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/but_exit"
                android:onClick="buttonClicked"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:layout_gravity="center_vertical"
            android:weightSum="1">

            <EditText
                android:id="@+id/edit_ip"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="192.168.0.7:9878"
                android:textColor="@color/font_color"/>

            <ImageButton
                android:src="@drawable/ic_baseline_save_24px"
                android:text="@string/pad_update"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/but_update"
                android:onClick="buttonClicked"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
